fixed text overlap

--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,8 @@ footer .container {
   border: 4px solid black;
   padding-left: 15px;
   padding-right: 15px;
+  padding-bottom: 5px;
+  padding-top: 5px;
   background-color: #f4e7bd;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
